<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="common_button_next">Next</string>
    <string name="common_button_add">Add</string>
    <string name="common_button_save">Save</string>
    <string name="common_button_delete">Delete</string>
    <string name="common_button_copy">Copy</string>
    <string name="common_copied_to_clipboard">Copied to clipboard</string>
    <string name="common_service_url">Service URL</string>
    <string name="common_service_url_placeholder">e.g. https://ntfy.example.com</string>
    <string name="common_priority_min_name">Min priority</string>
    <string name="common_priority_low_name">Low priority</string>
    <string name="common_priority_default_name">Default priority</string>
    <string name="common_priority_high_name">High priority</string>
    <string name="common_priority_max_name">Max priority</string>
    <string name="common_certificate_subject">Subject</string>
    <string name="common_certificate_issuer">Issuer</string>
    <string name="common_certificate_fingerprint">SHA-256 fingerprint</string>
    <string name="common_certificate_valid_from">Valid from</string>
    <string name="common_certificate_valid_until">Valid until</string>
    <string name="common_certificate_added_toast">Certificate added</string>
    <string name="common_certificate_deleted_toast">Certificate deleted</string>
    <string name="channel_notifications_group_default_name">Default</string>
    <string name="channel_subscriber_service_name">Subscription Service</string>
    <string name="channel_subscriber_notification_title">Listening for incoming notifications</string>
    <string name="channel_subscriber_notification_instant_text">Subscribed to instant delivery topics</string>
    <string name="channel_subscriber_notification_instant_text_one">Subscribed to one instant delivery topic</string>
    <string name="channel_subscriber_notification_instant_text_two">Subscribed to two instant delivery topics</string>
    <string name="channel_subscriber_notification_instant_text_three">Subscribed to three instant delivery topics</string>
    <string name="channel_subscriber_notification_instant_text_four">Subscribed to four instant delivery topics</string>
    <string name="channel_subscriber_notification_instant_text_five">Subscribed to five instant delivery topics</string>
    <string name="channel_subscriber_notification_instant_text_six">Subscribed to six instant delivery topics</string>
    <string name="channel_subscriber_notification_instant_text_more">Subscribed to %1$d instant delivery topics</string>
    <string name="channel_subscriber_notification_noinstant_text">Subscribed to topics</string>
    <string name="channel_subscriber_notification_noinstant_text_one">Subscribed to one topic</string>
    <string name="channel_subscriber_notification_noinstant_text_two">Subscribed to two topics</string>
    <string name="channel_subscriber_notification_noinstant_text_three">Subscribed to three topics</string>
    <string name="channel_subscriber_notification_noinstant_text_four">Subscribed to four topics</string>
    <string name="channel_subscriber_notification_noinstant_text_five">Subscribed to five topics</string>
    <string name="channel_subscriber_notification_noinstant_text_six">Subscribed to six topics</string>
    <string name="channel_subscriber_notification_noinstant_text_more">Subscribed to %1$d topics</string>
    <string name="refresh_message_result">%1$d notification(s) received</string>
    <string name="refresh_message_no_results">Everything is up to date</string>
    <string name="refresh_message_error">Could not refresh %1$d subscriptions\n\n%2$s</string>
    <string name="refresh_message_error_one">Could not refresh subscription: %1$s</string>
    <string name="main_action_bar_title">Subscribed topics</string>
    <string name="main_menu_connection_error">Connection error</string>
    <string name="main_menu_notifications_enabled">Notifications on</string>
    <string name="main_menu_notifications_disabled_forever">Notifications muted</string>
    <string name="main_menu_notifications_disabled_until">Notifications muted until %1$s</string>
    <string name="main_menu_settings_title">Settings</string>
    <string name="main_menu_report_bug_title">Report a bug</string>
    <string name="main_menu_docs_title">Read the docs</string>
    <string name="main_menu_rate_title">Rate the app ⭐</string>
    <string name="main_action_mode_menu_unsubscribe">Unsubscribe</string>
    <string name="main_action_mode_delete_dialog_message">
        Unsubscribe from the selected topic(s) and
        permanently delete all notifications?
    </string>
    <string name="main_action_mode_delete_dialog_permanently_delete">Delete permanently</string>
    <string name="main_action_mode_delete_dialog_cancel">Cancel</string>
    <string name="main_item_status_text_one">%1$d notification</string>
    <string name="main_item_status_text_not_one">%1$d notifications</string>
    <string name="main_item_status_reconnecting">reconnecting …</string>
    <string name="main_item_status_unified_push">%1$s (UnifiedPush)</string>
    <string name="main_item_date_yesterday">yesterday</string>
    <string name="main_add_button_description">Add subscription</string>
    <string name="main_no_subscriptions_text">It looks like you don\'t have any subscriptions yet.</string>
    <string name="main_how_to_intro">
        Click the + to create or subscribe to a topic.
        Afterwards you receive notifications on your device
        when sending messages via PUT or POST.
    </string>
    <string name="main_how_to_link">Detailed instructions available on ntfy.sh, and in the docs.
    </string>
    <string name="main_unified_push_toast">This subscription is managed by %1$s via UnifiedPush</string>
    <string name="main_banner_battery_text">Battery optimization should be off for the app to avoid notification delivery issues.</string>
    <string name="main_banner_battery_button_remind_later">Ask later</string>
    <string name="main_banner_battery_button_dismiss">Dismiss</string>
    <string name="main_banner_battery_button_fix_now">Fix now</string>
    <string name="main_banner_websocket_text">Switching to WebSockets is the recommended way to connect to your server, and could improve battery life, but may require <a href="https://ntfy.sh/docs/config/#nginxapache2caddy">additional config in your proxy</a>. This can be toggled in the Settings.</string>
    <string name="main_banner_websocket_button_remind_later">Ask later</string>
    <string name="main_banner_websocket_button_dismiss">Dismiss</string>
    <string name="main_banner_websocket_button_enable_now">Enable now</string>
    <string name="main_banner_websocket_reconnect_text">To ensure WebSockets reconnect in the background, grant the "Alarm &amp; Reminders" permission to ntfy</string>
    <string name="main_banner_websocket_reconnect_button_remind_later">Ask later</string>
    <string name="main_banner_websocket_reconnect_button_dismiss">Dismiss</string>
    <string name="main_banner_websocket_reconnect_button_enable_now">Grant now</string>
    <string name="add_dialog_title">Subscribe to topic</string>
    <string name="add_dialog_description_below">
        Topics may not be password-protected, so choose a name that is hard to guess.
        Once subscribed, you can PUT/POST notifications.
    </string>
    <string name="add_dialog_topic_name_hint">Topic name, e.g. phils_alerts</string>
    <string name="add_dialog_use_another_server">Use another server</string>
    <string name="add_dialog_use_another_server_description">Enter service URLs below to subscribe to topics from other servers.</string>
    <string name="add_dialog_instant_delivery">Instant delivery in doze mode</string>
    <string name="add_dialog_instant_delivery_description">Ensures messages are delivered immediately, even if the device is inactive.</string>
    <string name="add_dialog_foreground_description">Instant delivery is always on for hosts other than %1$s.</string>
    <string name="add_dialog_button_cancel">Cancel</string>
    <string name="add_dialog_button_subscribe">Subscribe</string>
    <string name="add_dialog_button_back">Back</string>
    <string name="add_dialog_button_done">Done</string>
    <string name="add_dialog_button_login">Log in</string>
    <string name="add_dialog_encrypt_title">Set encryption (optional)</string>
    <string name="add_dialog_encrypt_description">Optionally set a password to encrypt messages for this topic. You can generate a random password or enter your own. Tap Done to skip encryption.</string>
    <string name="add_dialog_encrypt_password_hint">Encryption password (optional)</string>
    <string name="add_dialog_error_connection_failed">Connection failed: %1$s</string>
    <string name="add_dialog_login_title">Login required</string>
    <string name="add_dialog_login_description">This topic requires you to login. Please type in a username and password.</string>
    <string name="add_dialog_login_username_hint">Username</string>
    <string name="add_dialog_login_password_hint">Password</string>
    <string name="add_dialog_login_error_not_authorized">Login failed. User %1$s not authorized.</string>
    <string name="add_dialog_login_new_user">New user</string>
    <string name="add_dialog_base_urls_dropdown_choose">Choose service URL</string>
    <string name="add_dialog_base_urls_dropdown_clear">Clear service URL</string>
    <string name="add_dialog_error_ssl_untrusted">Server certificate not trusted</string>
    <string name="detail_no_notifications_text">You haven\'t received any notifications for this topic yet.</string>
    <string name="detail_how_to_intro">To send notifications to this topic, simply PUT or POST to the topic URL.
    </string>
    <string name="detail_how_to_example"><![CDATA[ Example (using curl):<br/><tt>$ curl -d \"Hi\" %1$s</tt> ]]></string>
    <string name="detail_how_to_link">Detailed instructions available on ntfy.sh, and in the docs.
    </string>
    <string name="detail_clear_dialog_message">Delete all of the notifications in this topic?
    </string>
    <string name="detail_clear_dialog_permanently_delete">Delete permanently</string>
    <string name="detail_clear_dialog_cancel">Cancel</string>
    <string name="detail_delete_dialog_message">
        Unsubscribe from this topic and delete
        all received notifications?
    </string>
    <string name="detail_delete_dialog_permanently_delete">Delete permanently</string>
    <string name="detail_delete_dialog_cancel">Cancel</string>
    <string name="detail_test_title">Test: You can set a title if you like.</string>
    <string name="detail_test_message">This is a test notification from the ntfy Android app. It has a level %1$d priority.
        If you send another, it may look different.
    </string>
    <string name="detail_test_message_error">Cannot send message: %1$s</string>
    <string name="detail_menu_notifications_disabled_forever">Notifications muted</string>
    <string name="chat_info_topic_label">主题</string>
    <string name="chat_info_password_label">加密密码</string>
    <string name="welcome_title">Welcome to NtfyChat</string>
    <string name="welcome_subtitle">Set up your profile to get started</string>
    <string name="welcome_avatar_description">User avatar</string>
    <string name="welcome_select_avatar">Select Avatar</string>
    <string name="welcome_username_hint">Username</string>
    <string name="welcome_complete">Complete</string>
    <string name="profile_username_placeholder">Username</string>
    <string name="profile_tap_to_edit">Tap to edit profile</string>
    <string name="profile_edit">Edit</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_save">Save</string>
</resources>