<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_connection_error"
        android:icon="@drawable/ic_warning_white_24dp"
        android:title="@string/main_menu_connection_error"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_menu_notifications_enabled"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/main_menu_notifications_enabled"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_notifications_disabled_until"
        android:icon="@drawable/ic_notifications_off_time_white_outline_24dp"
        android:title="@string/main_menu_notifications_disabled_forever"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_notifications_disabled_forever"
        android:icon="@drawable/ic_notifications_off_white_outline_24dp"
        android:title="@string/detail_menu_notifications_disabled_forever"
        app:showAsAction="ifRoom" />
</menu>
