<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfileActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/edit_profile_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:title="@string/edit_profile_title"
        app:navigationIcon="@drawable/ic_close_white_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/edit_profile_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_person_black_24dp"
        android:contentDescription="@string/welcome_avatar_description"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_profile_username_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_username_hint"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_profile_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_save"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
